<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="hint_first_number">Enter first number</string>
    <string name="hint_second_number">Enter second number</string>
    <string name="add">Add (+)</string>
    <string name="subtract">Subtract (-)</string>
    <string name="multiply">Multiply (×)</string>
    <string name="divide">Divide (÷)</string>
    <string name="clear">Clear</string>
    <string name="result_placeholder">Result will appear here</string>
    <string name="result_format">Result: %.2f</string>
    <string name="error_empty_fields">Please enter both numbers</string>
    <string name="error_invalid_number">Please enter valid numbers</string>
    <string name="error_divide_by_zero">Cannot divide by zero</string>
</resources>